[package]
name = "moga_iris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# 图形核心
wgpu = { version = "24.0", features = ["dx12"] } # 强制开启 dx12 以便与 WPF 共享纹理
raw-window-handle = "0.6"

# 2D 几何处理 (ROI 必备)
lyon = "1.0"

# 数学运算
bytemuck = { version = "1.14", features = ["derive"] } # 用于将结构体安全传给 GPU
glam = "0.24" # 比 cgmath 更快更现代

# 跨语言绑定
libc = "0.2"

[build-dependencies]
csbindgen = "1.8"